    (Gabor Szadovszky via tomwhite)

    AVRO-1943: Java: Flaky test:
    TestNettyServerWithCompression.testConnectionsCount
    (Gabor Szadovszky via tomwhite)

    AVRO-1882: Java: Fix ConcurrentHashMap with non-string keys.
    (Sachin Goyal via blue)

    AVRO-1929: Java: SchemaCompatibility fails to recognize
    string<->bytes promotion.  (Anders Sundelin via cutting)

Avro 1.8.1 (14 May 2016)

  INCOMPATIBLE CHANGES

  NEW FEATURES

  OPTIMIZATIONS

  IMPROVEMENTS

    AVRO-1793. Python2: Retain stack trace and original exception when failing
    to parse schemas. Contributed by Jakob Homan (jghoman).

    AVRO-1778: JavaScript: Add IPC/RPC support. (mtth)

    AVRO-1824: C++: Fix docs for building Avro C++. (William S. Fulton via blue)

    AVRO-1701: Fix for "warning: comparison between 'const enum testgen_r::ExampleEnum' and 'const enum testgen::ExampleEnum'" (peter liu via thiru)

    AVRO-1823: Java: Do not swallow IOException while reading magic bytes.
    (Koji Noguchi via blue)

    AVRO-1825: Allow running build.sh dist under git (nielsbasjes)

    AVRO-1819, AVRO-1820: Java: Add aliases, custom properties to Protocol.
    (Konstantin Usachev via blue)

    AVRO-1834: Lower the Javadoc warnings on the generated code. (nielsbasjes)

    AVRO-1835: Running tests using JDK 1.8 complains about MaxPermSize (nielsbasjes)

    AVRO-1828: Add EditorConfig file and cleanup of whitespace violations (nielsbasjes)

    AVRO-1839: Update the gitignore files to hide generated files (nielsbasjes)

    AVRO-1838: Java: Update checkstyle to catch trailing whitespace.
    (nielsbasjes via blue)

    AVRO-1840: Ensure that build.sh clean really cleans all generated files (nielsbasjes)

    AVRO-1841: Add clientside githooks to do basic commit validation (nielsbasjes) 

    AVRO-1807: Java/JSON: Throw for unsupported objects rather than ignoring. (blue)

  BUG FIXES

    AVRO-1493. Java: Avoid the "Turkish Locale Problem". Schema fingerprints are